# genderapi

./: .gitignore  README.md  day1.py  index.html
.github/workflows/: deploy_gender_api.yml  main.yml
api/: Dockerfile  api.py  pyproject.toml
terraform/: main.tf
