[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Christophe Blefari <christophe.blefari@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
joblib = "^1.4.2"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
